kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: datagrid-service
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app: datagrid
  ports:
  - name: hazelcast
    port: 5701
