kube/service-ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: datagrid
  namespace: develop
  labels:
    app: datagrid
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: datagrid
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: datagrid-service-ingress
  namespace: develop
spec:
  rules:
  - host: datagrid.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: datagrid
            port:
              number: 80
  ingressClassName: nginx
